--- a/aws-workshop-textract/package.json
+++ b/aws-workshop-textract/package.json
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@aws-sdk/client-textract": "^3.105.0",
+    "aws-sdk": "^2.1150.0",
+    "bootstrap": "^5.1.3",
+    "ngx-dropzone": "^3.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
